public static class AnimationConstants 
{
    public static class Player
    {
        public const string GameplayCutscene = "gameplayCutscene";
        public const string Proceed = "proceedAbility";
        public const string ProceedGameplayCutscene = "proceedGameplayCutscene";
        public const string ChoiceSeparator = "choiceSeparator";
        public const string Exit = "exitAbility";
        public const string ExitGameplayCutscene = "exitGameplayCutscene";
        public const string GenericAction = "GenericUpperAction";

        public const string Respawn = "Respawn";
        public const string BaseLayer = "Base";

        public const string Jump = "jump";
        public const string Falling = "falling";
        public const string FallSpeed = "fallSpeed";

        public const string SlowdownSpeed = "slowdownSpeed";
        public const string Slowdown = "slowdown";
    }

    public static class Enemy
    {
        public const string InBoundsReturn = "inBoundsReturn";
        public const string BoundsAway = "boundsAway";
        public const string BoundsWait = "boundsWait";

        public const string ToFarFollow = "toFarFollow";

        public const string ToSearch = "toSearch";
    }
}